# simultaneous-translation-edu-v2

./: .gitignore  AGENT.md  README.md  SKILL.md  docusaurus.config.ts  package-lock.json  package.json  pyproject.toml  sidebars.ts
.github/workflows/: deploy.yml
curriculum/: lesson_plans.md  syllabus.md
docs/: 00_course_roadmap.md  01_problem_setup.md  02_latency_metrics.md  03_policy_design.md  04_model_training.md  05_project_practicum.md
docs/00-orientation/: 01-overview.md
docs/01-problem-setup/: 01-offline-vs-simultaneous.md  02-read-write-control.md
docs/02-metrics/: 01-latency-trace.md  02-average-proportion-average-lagging.md
docs/03-policies/: 01-wait-k-fixed-chunk.md  02-local-agreement-confidence.md
docs/04-model-training/: 01-synthetic-data.md  02-seq2seq-attention.md
docs/05-labs/: 01-run-the-lab.md  02-extend-the-system.md
docs/06-research/: 01-beyond-baseline.md
docs/resources/: checklist.md  glossary.md  syllabus.md
examples/: compare_policies.py
scripts/: qa_docs.py
src/css/: custom.css
src/pages/: index.module.css  index.tsx
src/simulst_edu/: __init__.py  data.py  decoding.py  metrics.py  model.py  policies.py  train.py  vocab.py
tests/: test_metrics.py  test_policies.py
